src/objects/SSign__SSEnvelope_Document__c.object
<CustomObject>
    <fields>
        <fullName>SSign__Active_Signer_Email__c</fullName>
        <label>Active Signer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Active_Signer_Num_Documents_Total__c</fullName>
        <label>Active Signer Num Documents Total</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSign__Active_Signer_URL__c</fullName>
        <label>Active Signer URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Active_Signer__c</fullName>
        <label>Active Signer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Active__c</fullName>
        <formula>SSign__Active_Signer__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Data_XML__c</fullName>
        <label>Audit Data XML</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Data__c</fullName>
        <label>Audit Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Document_Attachment_ID__c</fullName>
        <label>Audit Document Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Document_Hash__c</fullName>
        <label>Audit Document Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Document_Name__c</fullName>
        <label>Audit Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Signed_DateTimeStr__c</fullName>
        <label>Audit Signed DateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Signed_DateTime__c</fullName>
        <label>Audit Signed DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Signed_Email__c</fullName>
        <label>Audit Signed Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Signed_IP__c</fullName>
        <label>Audit Signed IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Signed_Name__c</fullName>
        <label>Audit Signed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_View_Details__c</fullName>
        <label>Audit View Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Viewed_DateTime__c</fullName>
        <label>Audit Viewed DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SSign__Audit_Viewed_IP__c</fullName>
        <label>Audit Viewed IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Comment__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Continue_as_Active_Signer__c</fullName>
        <formula>IF(
  CONTAINS(SSign__Active_Signer_URL__c, SSign__SFSiteURL__c),
  IF(
    AND(NOT(ISBLANK(SSign__Active_Signer_URL__c)), SSign__Active__c),
    HYPERLINK(
      SSign__Active_Signer_URL__c,
      IMAGE(&quot;/img/icon/signature24.png&quot;,&quot;Continue Signing&quot;),
      &quot;_blank&quot;
    ),
    &apos;&apos;
  ),
  IF(
    AND(NOT(ISBLANK(SSign__Active_Signer_URL__c)), SSign__Active__c),
    HYPERLINK(
      SSign__SFSiteURL__c + SSign__Active_Signer_URL__c,
      IMAGE(&quot;/img/icon/signature24.png&quot;,&quot;Continue Signing&quot;),
      &quot;_blank&quot;
    ),
    &apos;&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Continue as Active Signer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Coordinates_XML__c</fullName>
        <label>Coordinates XML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Current_Sign_In_Person_URL__c</fullName>
        <label>Current Sign In Person URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__CustomEmailHTML__c</fullName>
        <label>CustomEmailHTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Data2__c</fullName>
        <label>Data2</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Data3__c</fullName>
        <label>Data3</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Data4__c</fullName>
        <label>Data4</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Date_Last_Reminder_Sent__c</fullName>
        <label>Date Last Reminder Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSign__Decline_Reason__c</fullName>
        <label>Decline Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Digital_Signature_AD__c</fullName>
        <label>Digital Signature (Audit Document)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Digital_Signature_SD__c</fullName>
        <label>Digital Signature (Signed Document)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Disable_Email_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Email Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Document_Attachment_ID__c</fullName>
        <label>Document Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Edit_Code__c</fullName>
        <label>Edit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Email_Address_To_Notify_Upon_Bounce__c</fullName>
        <label>Email Address To Notify Upon Bounce</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSign__Expired__c</fullName>
        <formula>AND( 
AND( 
NOT( 
ISNULL(SSign__Expiration_Date__c) 
), 
(TODAY() &gt;= SSign__Expiration_Date__c) 
), 
AND( 
(SSign__Status__c != &apos;Completed&apos;), 
(SSign__Status__c != &apos;Declined&apos;) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__HashID__c</fullName>
        <externalId>true</externalId>
        <label>HashID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Input_Field_XML__c</fullName>
        <label>Input Field XML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Last_Reminder_Sent__c</fullName>
        <label>Last Reminder Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SSign__Redirect_URL__c</fullName>
        <label>Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Remind_After_Generate__c</fullName>
        <label>Remind After Generate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSign__Remind_Before_Expire__c</fullName>
        <label>Remind Before Expire</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSign__Remote_Sign_Request_URL__c</fullName>
        <formula>SSign__SFSiteURL__c + &apos;SSIGN__SSVerify?rid=&apos; + SSign__HashID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remote Sign Request URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Remote_View_Captured_Signature_URL__c</fullName>
        <formula>IF(
    NOT(ISBLANK(SSign__Signature_Attachment_ID__c)),
    SSign__SFSiteURL__c + &apos;SSIGN__SSRedirect?redirectPage=SSIGN__SSViewEnvIncl&amp;aid=&apos; + SSign__HashID__c,
    &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remote View Captured Signature URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Remote_View_Original_Doc_URL__c</fullName>
        <formula>SSign__SFSiteURL__c + &apos;SSIGN__SSRedirect?redirectPage=SSIGN__SSViewEnvIncl&amp;rid=&apos; + SSign__HashID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remote View Original Doc URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Remote_View_Signed_Doc_URL__c</fullName>
        <formula>IF(
    NOT(ISBLANK(SSign__Audit_Document_Attachment_ID__c)),
    SSign__SFSiteURL__c + &apos;sfc/servlet.shepherd/version/download/&apos; + SSign__Audit_Document_Attachment_ID__c,
    IF(
        NOT(ISBLANK(SSign__Signed_Document_Attachment_ID__c)),
        SSign__SFSiteURL__c + &apos;sfc/servlet.shepherd/version/download/&apos; + SSign__Signed_Document_Attachment_ID__c,
        &apos;&apos;
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remote View Signed Doc URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Resend_Contract__c</fullName>
        <formula>IF(SSign__Active__c,HYPERLINK(&quot;/apex/SSIGN__SSRedirect?redirectPage=SSIGN__SSCreateEnvelope&amp;action=editProfiles&amp;SDId=&quot; + SSign__SSEnvelope__r.SSign__Request_Email_Template_ID__c + &quot;&amp;signInPerson=false&amp;SSEDId=&quot; + Id + &quot;&amp;activeOnly=true&quot;,IMAGE( &apos;/img/func_icons/util/mailCloseEnv16.gif&apos;,&apos;Email&apos;),&quot;_blank&quot;),SSign__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resend Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__SDoc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDoc</label>
        <referenceTo>SDOC__SDoc__c</referenceTo>
        <relationshipLabel>S-Sign Envelope Documents</relationshipLabel>
        <relationshipName>S_Sign_Envelope_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSign__SFBaseURL__c</fullName>
        <label>SFBaseURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__SFSiteURL__c</fullName>
        <label>SFSiteURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__SSEnvelope__c</fullName>
        <label>Envelope</label>
        <referenceTo>SSign__SSEnvelope__c</referenceTo>
        <relationshipLabel>S-Sign Envelope Documents</relationshipLabel>
        <relationshipName>Envelope_Includes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SSign__SSTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>S-Sign Template</label>
        <referenceTo>SSign__SSTemplate__c</referenceTo>
        <relationshipLabel>S-Sign Envelope Documents</relationshipLabel>
        <relationshipName>SSEnvelope_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSign__Sign_In_Person__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sign In Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Sign_Request_URL__c</fullName>
        <formula>SSign__SFBaseURL__c + &apos;apex/SSIGN__SSVerify?iid=&apos; + SSign__HashID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sign Request URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Signature_Attachment_ID__c</fullName>
        <label>Signature Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Signed_Document_Attachment_ID__c</fullName>
        <label>Signed Document Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Signed_Document_Hash__c</fullName>
        <label>Signed Document Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Signed_Document_Name__c</fullName>
        <label>Signed Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Signer_Profile_XML__c</fullName>
        <label>Signer Profile XML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Signing_Order__c</fullName>
        <label>Signing Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSign__Status__c</fullName>
        <label>Sign Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Template_CSS_XML__c</fullName>
        <label>Template CSS XML</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Use_Only_Pre_Configured_SSign_Tags__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Only Pre-Configured SSign Tags</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Verification_Map__c</fullName>
        <label>Verification Map</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__View_Captured_Signature_URL__c</fullName>
        <formula>IF(
    NOT(ISBLANK(SSign__Signature_Attachment_ID__c)),
    SSign__SFBaseURL__c + &apos;apex/SSIGN__SSRedirect?redirectPage=SSIGN__SSViewEnvIncl&amp;aid=&apos; + SSign__HashID__c,
    &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Captured Signature URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__View_Org_Doc__c</fullName>
        <formula>IF(
NOT(ISBLANK(SSign__Document_Attachment_ID__c)),
HYPERLINK( &apos;/sfc/servlet.shepherd/version/download/&apos; + SSign__Document_Attachment_ID__c
,IMAGE(&quot;/sfc/images/docicons/doctype_pdf_16.png&quot;,&quot;View&quot;)
,&quot;_blank&quot;),
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Original Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__View_Signed_Doc__c</fullName>
        <formula>IF(
    NOT(ISBLANK(SSign__Audit_Document_Attachment_ID__c)),
    HYPERLINK( &apos;/sfc/servlet.shepherd/version/download/&apos; + SSign__Audit_Document_Attachment_ID__c
        ,IMAGE(&quot;/img/icon/form32.png&quot;,&quot;View&quot;)
        ,&quot;_blank&quot;),
    &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Signed Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Void_Contract__c</fullName>
        <formula>IF(NOT(BEGINS(SSign__Status__c, &apos;Voided&apos;)), HYPERLINK(&apos;/apex/SSIGN__SSVoidContracts?voidContracts=true&amp;ssedId=&apos; + Id, &apos;Void Contract&apos;, &apos;_self&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Void Contract</label>
        <type>Text</type>
    </fields>
    <label>S-Sign Envelope Document</label>
    <listViews>
        <fullName>SSign__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SSED-{000}</displayFormat>
        <label>Envelope Doc Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S-Sign Envelope Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>